--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
     context-path: /
 spring:
   application:
-    name: Rocket-Admin
+    name: Wilton-File
   profiles:
     active: dev
   thymeleaf:
@@ -22,43 +22,16 @@ spring:
       max-file-size: 10MB
       max-request-size: 100MB
 
-rocket:
-  auth:
-    jwtAccessKey: rocket-admin-secret
-    socialLoginClientId:
-  security:
-    ignored:
-      urls: #安全路径白名单
-        - /doc.html
-        - /swagger-resources/**
-        - /swagger/**
-        - /**/v2/api-docs
-        - /admin/images/**
-        - /**/*.js
-        - /**/*.css
-        - /**/*.png
-        - /favicon.ico
-        - /webjars/**
-        - /actuator/**
-        - /druid/**
-        - /login
-        - /oauth/**
-        - /auth/captcha
-        - /auth/token
-        - /auth/register
-        - /auth/info
-        - /dashboard
-
 mybatis-plus:
-  type-aliases-package: cn.wilton.rocket.*.entity
-  type-enums-package: cn.wilton.rocket.common.entity.enums
+  type-aliases-package: cn.wilton.framework.file*.entity
+  type-enums-package: cn.wilton.framework.file.common.entity.enums
   mapper-locations: classpath*:mapper/*.xml
   configuration:
     jdbc-type-for-null: null
   global-config:
     db-config:
       #主键类型 AUTO:"数据库ID自增" INPUT:"用户输入ID",ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
-      id-type: ID_WORKER
+      id-type: AUTO
     banner: false
     configuration:
       #字段策略 IGNORED:"忽略判断",NOT_NULL:"非 NULL 判断"),NOT_EMPTY:"非空判断"
