--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,6 +22,11 @@ spring:
       max-file-size: 10MB
       max-request-size: 100MB
 
+
+wilton:
+
+
+
 mybatis-plus:
   type-aliases-package: cn.wilton.framework.file*.entity
   type-enums-package: cn.wilton.framework.file.common.entity.enums
