--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,12 @@
 
     <build>
         <finalName>rocket-admin-${project.version}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
