--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,7 +8,7 @@ spring:
       primary: base
       datasource:
         base:
-          url: jdbc:mysql://rm-uf6rb2523f415bc6dno.mysql.rds.aliyuncs.com:3306/rocket_base?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://rm-uf6rb2523f415bc6dno.mysql.rds.aliyuncs.com:3306/wilton_file?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
           driver-class-name: com.mysql.cj.jdbc.Driver
           username: wilton
           password: Wilton2019
@@ -16,7 +16,7 @@ spring:
     database: 0
     host: 127.0.0.1
     port: 6379
-    password: #RocketAdmin123
+    password: RocketAdmin123
     lettuce:
       pool:
         min-idle: 8 # 连接池中的最小空闲连接
