--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ spring:
     mode: LEGACYHTML5
     encoding: UTF-8
   jackson:
+    generator:
+      write_numbers_as_strings: true
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
   # 文件大小限制
@@ -33,6 +35,11 @@ mybatis-plus:
     db-config:
       #主键类型 AUTO:"数据库ID自增" INPUT:"用户输入ID",ID_WORKER:"全局唯一ID (数字类型唯一ID)", UUID:"全局唯一ID UUID";
       id-type: AUTO
+      logic-delete-field: deleted  # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
+      # 删除状态为1
+      logic-delete-value: 1
+      # 没有删除状态为0
+      logic-not-delete-value: 0
     banner: false
     configuration:
       #字段策略 IGNORED:"忽略判断",NOT_NULL:"非 NULL 判断"),NOT_EMPTY:"非空判断"
@@ -44,3 +51,11 @@ mybatis-plus:
 
 logging:
   config: classpath:logback-spring.xml
+
+feign:
+  hystrix:
+    enabled: true
+  httpclient:
+    enabled: false
+  okhttp:
+    enabled: true
