--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <docker.serverId>docker-aliyun</docker.serverId>
         <docker.registry>registry.cn-shanghai.aliyuncs.com/wilton</docker.registry>
         <docker.registry.name>wilton/rocket</docker.registry.name>
+        <thymeleaf.springsecurity5>3.0.4.RELEASE</thymeleaf.springsecurity5>
         <mysql-connector.version>8.0.11</mysql-connector.version>
         <hutool.version>5.4.0</hutool.version>
         <mybatis-plus.version>3.2.0</mybatis-plus.version>
@@ -37,6 +38,16 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <!-- 权限校验-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.thymeleaf.extras</groupId>
+            <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+            <version>${thymeleaf.springsecurity5}</version>
         </dependency>
 
         <dependency>
