--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,20 @@
             <version>3.6.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+        </dependency>
+
+
+
         <!--图片压缩工具-->
         <dependency>
             <groupId>net.coobird</groupId>
