--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
         <docker.serverId>docker-aliyun</docker.serverId>
         <docker.registry>registry.cn-shanghai.aliyuncs.com/wilton</docker.registry>
         <docker.registry.name>wilton/rocket</docker.registry.name>
-        <thymeleaf.springsecurity5>3.0.4.RELEASE</thymeleaf.springsecurity5>
+        <thymeleaf-spring5.version>3.0.9.RELEASE</thymeleaf-spring5.version>
         <mysql-connector.version>8.0.11</mysql-connector.version>
         <hutool.version>5.4.0</hutool.version>
         <mybatis-plus.version>3.2.0</mybatis-plus.version>
@@ -53,7 +53,6 @@
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-springsecurity5</artifactId>
-            <version>${thymeleaf.springsecurity5}</version>
         </dependency>
 
         <dependency>
