--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.vihackerframework</groupId>
+            <artifactId>vihacker-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
