--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+
         <!--Mysql数据库驱动-->
         <dependency>
             <groupId>mysql</groupId>
