--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
         <docker.host>http://127.0.0.1:8150</docker.host>
         <docker.maven.plugin.version>1.2.2</docker.maven.plugin.version>
         <docker.serverId>docker-aliyun</docker.serverId>
-        <docker.registry>registry.cn-shanghai.aliyuncs.com/wilton</docker.registry>
+        <docker.registry>registry.vihacker.top/wilton</docker.registry>
         <docker.registry.name>wilton/rocket</docker.registry.name>
         <thymeleaf-spring5.version>3.0.9.RELEASE</thymeleaf-spring5.version>
         <mysql-connector.version>8.0.11</mysql-connector.version>
