--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -8,15 +8,15 @@ spring:
       primary: base
       datasource:
         base:
-          url: jdbc:mysql://rm-uf6rb2523f415bc6dno.mysql.rds.aliyuncs.com:3306/wilton_file_dev?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://vihacker.top:3306/wilton_file_dev?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
           driver-class-name: com.mysql.cj.jdbc.Driver
           username: wilton
-          password: Wilton2019
+          password: 1234567
   redis:
     database: 0
     host: vihacker.top
     port: 8179
-    password: RocketAdmin123
+    password: 123456
     lettuce:
       pool:
         min-idle: 8 # 连接池中的最小空闲连接
