--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,20 +1,25 @@
 # 开发环境配置
 spring:
-  autoconfigure:
-    exclude: com.alibaba.druid.spring.boot.autoconfigure.DruidDataSourceAutoConfigure
   datasource:
     dynamic:
+      hikari:
+        connection-timeout: 30000
+        max-lifetime: 1800000
+        max-pool-size: 15
+        min-idle: 5
+        connection-test-query: select 1
+        pool-name: ViHackerHikariCP
       p6spy: true
       primary: base
       datasource:
         base:
-          url: jdbc:mysql://vihacker.top:3306/wilton_file_dev?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://127.0.0.1:3306/wilton_file_dev?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=Asia/Shanghai
           driver-class-name: com.mysql.cj.jdbc.Driver
           username: wilton
-          password: 1234567
+          password: 123456
   redis:
     database: 0
-    host: vihacker.top
+    host: 127.0.0.1:3306
     port: 8179
     password: 123456
     lettuce:
